Update OOF-HAS JJB
Make updates to the OOF-HAS to support the
Casablanca release

Issue-ID: OPTFRA-406
Change-Id: I9e16ba0b6909ec76fbc0b5b2ec9755c461387526
Signed-off-by: Ruoyu <ruoyu.ying@intel.com>

--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -6,8 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'beijing':
-          branch: 'beijing'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'optf-has-settings'
     subproject:
       - 'conductor':
@@ -31,8 +31,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'beijing':
-          branch: 'beijing'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'optf-has-settings'
     subproject:
       - 'conductor':
