Add Casablanca branch for oom helm jobs
Issue-ID: CIMAN-224
Change-Id: If9fa0e97d141ea0dea6a66425047e53ef1d4fe47
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -17,12 +17,14 @@
         #!/bin/bash
         cd kubernetes/
         make common
-        make {subproject}'
+        make {subproject}
     oom_post_build_script: !include-raw-escape: shell/publish_helm_charts.sh
 
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
 
     subproject:
       - 'aaf':
