--- a/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
@@ -32,6 +32,28 @@
     build-node: centos7-redis-4c-4g
 
 - project:
+    name: vfc-gvnfm-vnflcm-java-arm64
+    project-name: 'vfc-gvnfm-vnflcm-arm64'
+    project: 'vfc/gvnfm/vnflcm'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'vfc-gvnfm-vnflcm-settings'
+    subproject:
+      - 'lcm':
+          pom: 'lcm/pom.xml'
+          pattern: 'lcm/**'
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-gvnfm-vnflcm-docker-image.sh'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: vfc-gvnfm-vnflcm-lcm-sonar
     jobs:
       - gerrit-maven-sonar
