--- a/jjb/vfc/vfc-nfvo-resmanagement.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement.yaml
@@ -19,6 +19,22 @@
             !include-raw-escape: 'build-nfvo-resmanagement-docker-image.sh'
           build-node: ubuntu1604-docker-8c-8g
 - project:
+    name: vfc-nfvo-resmanagement-arm64
+    project: 'vfc/nfvo/resmanagement'
+    project-name: 'vfc-nfvo-resmanagement-arm64'
+    mvn-settings: 'vfc-nfvo-resmanagement-settings'
+    stream:
+      - 'master':
+          branch: 'master'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-nfvo-resmanagement-docker-image.sh'
+
+-- project:
     name: vfc-nfvo-resmanagement-sonar
     jobs:
       - gerrit-maven-sonar
