--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokiav2.yaml
@@ -60,6 +60,46 @@
     build-node: ubuntu1604-docker-8c-8g
 
 - project:
+    name: vfc-nfvo-driver-vnfm-svnfm-nokiav2-docker-arm64
+    project: 'vfc/nfvo/driver/vnfm/svnfm'
+    project-name: 'vfc-nfvo-driver-svnfm-nokiav2-arm64'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
+    subproject:
+      - 'docker-vnfm-nokiav2':
+          pom: 'nokiav2/pom.xml'
+          pattern: 'nokiav2/**'
+    jobs:
+      - '{project-name}-{subproject}-{stream}-verify-docker-cascade-trigger':
+          docker_build_args: '--file Dockerfile.verify --build-arg MODE=-SNAPSHOT --build-arg REPO=snapshots'
+          docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
+          docker_root: '$WORKSPACE/nokiav2/deployment'
+          parent_job: '{project-name}-{stream}-drv-vnfm-nokiav2-verify-java'
+      - '{project-name}-{subproject}-{stream}-merge-docker-cascade-trigger':
+          docker_build_args: '--build-arg MODE=-SNAPSHOT --build-arg REPO=snapshots'
+          docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
+          docker_root: '$WORKSPACE/nokiav2/deployment'
+          parent_job: '{project-name}-{stream}-drv-vnfm-nokiav2-merge-java'
+      - '{project-name}-{subproject}-{stream}-release-version-docker-daily-no-sonar-cascade-trigger':
+          docker_build_args: '--build-arg MODE= --build-arg REPO=staging'
+          docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
+          docker_root: '$WORKSPACE/nokiav2/deployment'
+          docker_registry: '$DOCKER_REGISTRY:10003'
+          parent_job: '{project-name}-{stream}-drv-vnfm-nokiav2-release-version-java-daily'
+#Since the release is moved manually from the staging repo to the release repo this job can not
+#be triggered in a cascade way
+      - '{project-name}-{subproject}-{stream}-release-version-docker-no-sonar':
+          docker_build_args: '--build-arg MODE= --build-arg REPO=releases'
+          docker_name: 'onap/vfc/nfvo/svnfm/nokiav2'
+          docker_root: '$WORKSPACE/nokiav2/deployment'
+          docker_registry: '$DOCKER_REGISTRY:10003'
+    files: 'nokiav2/**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: vfc-nfvo-driver-vnfm-svnfm-nokiav2-sonar
     project: 'vfc/nfvo/driver/vnfm/svnfm'
     project-name: 'vfc-nfvo-driver-vnfm-svnfm-nokiav2'
