Add arm64 docker build for AAF
Add arm64 docker-build job for aaf project

Change-Id: I115cb6add87d6763531e5305f73382bac8f7329a
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/aaf/aaf-sms-csit.yaml
+++ b/jjb/aaf/aaf-sms-csit.yaml
@@ -8,6 +8,8 @@
       stream: 'master'
       functionality:
         - 'sms-test-plan':
-            trigger_jobs: 'aaf-sms-master-docker-golang-shell-daily'
+            trigger_jobs:
+              - 'aaf-sms-master-docker-golang-shell-daily'
+              - 'arm64-aaf-sms-master-docker-golang-shell-daily'
       robot-options: ''
       branch: 'master'
