Add arm64 docker build for AAF
Add arm64 docker-java-shell-daily job for
aaf-authz

Change-Id: I115cb6add87d6763531e5305f73382bac8f7329a
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/aaf/aaf-sshsm.yaml
+++ b/jjb/aaf/aaf-sshsm.yaml
@@ -19,3 +19,24 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: aaf-sshsm-arm64
+    project-name: 'aaf-sshsm-arm64'
+    build-timeout: 120
+    project: 'aaf/sshsm'
+    jobs:
+      - '{project-name}-{stream}-verify-c':
+         script:
+            !include-raw-escape: 'build-sshsm.sh'
+      - '{project-name}-{stream}-docker-c-shell-daily':
+         script:
+            !include-raw-escape: 'build-sshsm-docker-images.sh'
+    stream:
+      - 'master':
+          branch: 'master'
+
+    mvn-settings: 'aaf-sshsm-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
