--- a/jjb/aai/aai-esr-gui.yaml
+++ b/jjb/aai/aai-esr-gui.yaml
@@ -19,6 +19,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-esr-gui-settings'
     files: '**'
     archive-artifacts: ''
@@ -33,5 +35,5 @@
     nexus-iq-namespace: 'onap-'
     project: 'aai/esr-gui'
     project-name: 'aai-esr-gui'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'aai-esr-gui-settings'
