Add casablanca streams for maintenance release
Change-Id: Ic80e89c830d628ccf05449ef8166d8c6a5d00567
Issue-ID: AAI-1984
Signed-off-by: jimmy <jf2512@att.com>

--- a/jjb/aai/aai-esr-server.yaml
+++ b/jjb/aai/aai-esr-server.yaml
@@ -19,6 +19,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'master':
+          branch: 'casablanca'
     mvn-settings: 'aai-esr-server-settings'
     files: '**'
     archive-artifacts: ''
@@ -46,5 +48,5 @@
     nexus-iq-namespace: 'onap-'
     project: 'aai/esr-server'
     project-name: 'aai-esr-server'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'aai-esr-server-settings'
