--- a/jjb/externalapi/externalapi-nbi.yaml
+++ b/jjb/externalapi/externalapi-nbi.yaml
@@ -20,8 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'beijing':
-          branch: 'beijing'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'externalapi-nbi-settings'
     files: '**'
     archive-artifacts: ''
@@ -51,8 +51,9 @@
     nexus-iq-namespace: 'onap-'
     project: 'externalapi/nbi'
     project-name: 'externalapi-nbi'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'externalapi-nbi-settings'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
 
 - project:
     name: externalapi-nbi-sonar
@@ -62,7 +63,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'externalapi/nbi'
     project-name: 'externalapi-nbi'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'externalapi-nbi-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
