Allow docker-version-java to specify node
Allow {project-name}-{stream}-docker-version-java-daily
to allow a specific build-node to be able to run these
jobs using the ARM architecture nodes.

All current projects using this job will stay unchaged and
will still run their builds on ubuntu1604-docker-8c-8g.

Change-Id: If3e5c77b1e80c1dd86a676c920ac0ecb7d93d562
Issue-ID: CIMAN-219
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/externalapi/externalapi-nbi.yaml
+++ b/jjb/externalapi/externalapi-nbi.yaml
@@ -16,6 +16,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
+          build-node: 'ubuntu1604-docker-8c-8g'
     project: 'externalapi/nbi'
     stream:
       - 'master':
@@ -35,6 +36,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
     project: 'externalapi/nbi'
     stream:
       - 'master':
@@ -42,7 +44,6 @@
     mvn-settings: 'externalapi-nbi-settings'
     files: '**'
     archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
 
 - project:
     name: externalapi-nbi-clm
