--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -36,6 +36,7 @@
       - '{project-name}-{stream}-release-version-java-daily':
           mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
@@ -56,10 +57,12 @@
     project-name: 'sdc-arm64'
     jobs:
       - '{project-name}-{stream}-sdc-merge-java':
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
@@ -70,7 +73,6 @@
     mvn-settings: 'sdc-settings'
     files: '**'
     archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
     maven-version: 'mvn35'
 
 - project:
