--- a/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
@@ -7,6 +7,7 @@
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true'
@@ -26,6 +27,7 @@
     project-name: 'sdc-dcae-d-dt-be-main-arm64'
     jobs:
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true'
