--- a/jjb/sdc/sdc-dcae-d-dt.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt.yaml
@@ -8,6 +8,7 @@
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'server,docker'
           mvn-params: '-DskipTests=true'
@@ -28,6 +29,7 @@
     build-node: ubuntu1604-docker-arm64-4c-2g
     jobs:
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
           docker-pom: 'pom.xml'
           mvn-profile: 'server,docker'
           mvn-params: '-DskipTests=true'
