--- a/jjb/sdc/sdc-dcae-d-fe.yaml
+++ b/jjb/sdc/sdc-dcae-d-fe.yaml
@@ -8,6 +8,7 @@
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true'
@@ -25,9 +26,9 @@
 - project:
     name: sdc-dcae-d-fe-arm64
     project-name: 'sdc-dcae-d-fe-arm64'
-    build-node: ubuntu1604-docker-arm64-4c-2g
     jobs:
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-arm64-4c-2g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true'
