--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -13,6 +13,7 @@
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
