--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -35,5 +35,9 @@
     nexus-iq-namespace: 'onap-'
     project: integration
     project-name: 'integration'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'integration-settings'
