Add stream to CLM jobs to fix jenkins label
Issue-ID: AAI-2004
Change-Id: I459730a46ea7fb2f057425f4de6ce15464f8b180
Signed-off-by: jimmy <jf2512@att.com>

--- a/jjb/aai/aai-aai-common.yaml
+++ b/jjb/aai/aai-aai-common.yaml
@@ -46,6 +46,8 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'aai/aai-common'
     project-name: 'aai-aai-common'
-    branch: 'casablanca'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-aai-common-settings'
     mvn-version: 'mvn35'
