--- a/jjb/aai/aai-model-loader.yaml
+++ b/jjb/aai/aai-model-loader.yaml
@@ -47,5 +47,7 @@
     nexus-iq-namespace: 'onap-'
     project: 'aai/model-loader'
     project-name: 'aai-model-loader'
-    branch: 'casablanca'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-model-loader-settings'
