--- a/jjb/aai/aai-search-data-service.yaml
+++ b/jjb/aai/aai-search-data-service.yaml
@@ -46,5 +46,7 @@
     nexus-iq-namespace: 'onap-'
     project: 'aai/search-data-service'
     project-name: 'aai-search-data-service'
-    branch: 'casablanca'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-search-data-service-settings'
