Add Casablanca CLM jobs for CCSDK and SDNC
Added streams with casablanca and master to clm jobs for
ccsdk and sdnc.

Change-Id: I3c6e593112eed13840698d13be71b06355a4045f
Issue-ID: CIMAN-226
Signed-off-by: Timoney, Dan (dt5972) <dtimoney@att.com>

--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -49,7 +49,11 @@
     nexus-iq-namespace: 'onap-'
     project: 'ccsdk/apps'
     project-name: 'ccsdk-apps'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-apps-settings'
     build-node: ubuntu1604-builder-4c-4g
 
