--- a/jjb/sdnc/sdnc-northbound.yaml
+++ b/jjb/sdnc/sdnc-northbound.yaml
@@ -45,5 +45,9 @@
     project: sdnc/northbound
     project-name: 'sdnc-northbound'
     build-node: ubuntu1604-builder-4c-4g
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-northbound-settings'
