--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -45,7 +45,11 @@
     nexus-iq-namespace: 'onap-'
     project: 'ccsdk/distribution'
     project-name: 'ccsdk-distribution'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-distribution-settings'
     build-node: ubuntu1604-docker-8c-8g
 
