--- a/jjb/ccsdk/features.yaml
+++ b/jjb/ccsdk/features.yaml
@@ -43,6 +43,10 @@
     nexus-iq-namespace: 'onap-'
     project: 'ccsdk/features'
     project-name: 'ccsdk-features'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-features-settings'
     build-node: ubuntu1604-builder-4c-4g
