--- a/jjb/ccsdk/parent.yaml
+++ b/jjb/ccsdk/parent.yaml
@@ -29,7 +29,11 @@
     nexus-iq-namespace: 'onap-'
     project: 'ccsdk/parent'
     project-name: 'ccsdk-parent'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-parent-settings'
     build-node: ubuntu1604-builder-4c-4g
 
