--- a/jjb/ccsdk/platform-plugins.yaml
+++ b/jjb/ccsdk/platform-plugins.yaml
@@ -43,7 +43,11 @@
     nexus-iq-namespace: 'onap-'
     project: 'ccsdk/platform/plugins'
     project-name: 'ccsdk-platform-plugins'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-platform-plugins-settings'
     build-node: centos7-redis-4c-4g
 
