--- a/jjb/ccsdk/sli-core.yaml
+++ b/jjb/ccsdk/sli-core.yaml
@@ -43,7 +43,11 @@
     nexus-iq-namespace: 'onap-'
     project: 'ccsdk/sli/core'
     project-name: 'ccsdk-sli-core'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-sli-core-settings'
     build-node: ubuntu1604-builder-4c-4g
 
