--- a/jjb/sdnc/sdnc-apps.yaml
+++ b/jjb/sdnc/sdnc-apps.yaml
@@ -71,5 +71,9 @@
     project: sdnc/apps
     project-name: 'sdnc-apps'
     build-node: ubuntu1604-builder-4c-4g
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-apps-settings'
