--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -54,11 +54,141 @@
       - lf-infra-publish
 
 - job-template:
+    name: '{project-name}-arm64-{stream}-verify-csit-{functionality}'
+    disabled: false
+
+    project-type: freestyle
+    build-node: 'ubuntu1604-docker-arm64-4c-2g'
+    node: '{build-node}'
+
+    properties:
+      - lf-infra-properties:
+          project: 'integration/csit'
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: 'integration/csit'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-test-plan:
+          test-plan: 'plans/{project-name}/{functionality}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'gerrit'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+
+    triggers:
+      - gerrit-trigger-patch-submitted:
+          server: '{server-name}'
+          project: 'integration/csit'
+          branch: '{branch}'
+          files: '**/{project-name}/**'
+
+    builders:
+      - integration-install-robotframework
+      - inject:
+          properties-file: 'env.properties'
+      - integration-run-test
+
+    publishers:
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - lf-infra-publish
+
+- job-template:
     name: '{project-name}-{stream}-verify-csit-{functionality}-testng'
     disabled: false
 
     project-type: freestyle
     build-node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
+
+    properties:
+      - lf-infra-properties:
+          project: 'integration/csit'
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: 'integration/csit'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-test-plan:
+          test-plan: 'plans/{project-name}/{functionality}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+      - html-publisher-dir:
+          html-dir: '{html-dir}'
+      - html-publisher-files:
+          html-files: '{html-files}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'gerrit'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+
+    triggers:
+      - gerrit-trigger-patch-submitted:
+          server: '{server-name}'
+          project: 'integration/csit'
+          branch: '{branch}'
+          files: '**/{project-name}/**'
+
+    builders:
+      - integration-install-robotframework
+      - inject:
+          properties-file: 'env.properties'
+      - integration-run-test
+
+    publishers:
+      - testng:
+          pattern: archives/testng-results.xml
+          escape-test-description: true
+          escape-exception-msg: true
+          show-failed-builds: true
+          unstable-on-skipped-tests: false
+          failure-on-failed-test-config: false
+      - junit:
+          results: archives/testng-results.xml
+          health-scale-factor: 1.0
+          allow-empty-results: true
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - html-publisher:
+          allow-missing: true
+          dir: '{html-dir}'
+          files: '{html-files}'
+          keep-all: false
+          link-to-last-build: false
+          name: ExtentReport
+      - lf-infra-publish
+
+- job-template:
+    name: '{project-name}-arm64-{stream}-verify-csit-{functionality}-testng'
+    disabled: false
+
+    project-type: freestyle
+    build-node: 'ubuntu1604-docker-arm64-4c-2g'
     node: '{build-node}'
 
     properties:
@@ -187,11 +317,147 @@
       - lf-infra-publish
 
 - job-template:
+    name: '{project-name}-arm64-{stream}-csit-{functionality}'
+    disabled: false
+
+    project-type: freestyle
+    build-node: 'ubuntu1604-docker-arm64-4c-2g'
+    node: '{build-node}'
+
+    properties:
+      - lf-infra-properties:
+          project: 'integration/csit'
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: 'integration/csit'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-test-plan:
+          test-plan: 'plans/{project-name}/{functionality}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+
+    triggers:
+      - gerrit-trigger-patch-merged:
+          server: '{server-name}'
+          project: 'integration/csit'
+          branch: '{branch}'
+          files: '**/{project-name}/**'
+      - timed: '@daily'
+      - reverse:
+          jobs: '{obj:trigger_jobs}'
+
+    builders:
+      - integration-install-robotframework
+      - inject:
+          properties-file: 'env.properties'
+      - integration-run-test
+
+    publishers:
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - lf-infra-publish
+
+- job-template:
     name: '{project-name}-{stream}-csit-{functionality}-testng'
     disabled: false
 
     project-type: freestyle
     build-node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
+
+    properties:
+      - lf-infra-properties:
+          project: 'integration/csit'
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: 'integration/csit'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-test-plan:
+          test-plan: 'plans/{project-name}/{functionality}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+      - html-publisher-dir:
+          html-dir: '{html-dir}'
+      - html-publisher-files:
+          html-files: '{html-files}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+
+    triggers:
+      - gerrit-trigger-patch-merged:
+          server: '{server-name}'
+          project: 'integration/csit'
+          branch: '{branch}'
+          files: '**/{project-name}/**'
+      - timed: '@daily'
+      - reverse:
+          jobs: '{obj:trigger_jobs}'
+
+    builders:
+      - integration-install-robotframework
+      - inject:
+          properties-file: 'env.properties'
+      - integration-run-test
+
+    publishers:
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - testng:
+          pattern: archives/testng-results.xml
+          escape-test-description: true
+          escape-exception-msg: true
+          show-failed-builds: true
+          unstable-on-skipped-tests: false
+          failure-on-failed-test-config: false
+      - junit:
+          results: archives/testng-results.xml
+          health-scale-factor: 1.0
+          allow-empty-results: true
+      - html-publisher:
+          allow-missing: true
+          dir: '{html-dir}'
+          files: '{html-files}'
+          keep-all: false
+          link-to-last-build: false
+          name: ExtentReport
+      - lf-infra-publish
+
+- job-template:
+    name: '{project-name}-arm64-{stream}-csit-{functionality}-testng'
+    disabled: false
+
+    project-type: freestyle
+    build-node: 'ubuntu1604-docker-arm64-4c-2g'
     node: '{build-node}'
 
     properties:
