Move ARM64 CSIT jobs
Use ARM64 specific CSIT job templates rather than
the x86 ones.

Change-Id: I28973e124de12f75b1a8a6a5c2d0d5c99ef569de
Issue-ID: CIMAN-217
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -25,9 +25,9 @@
 - project:
     name: sdc-csit-arm64
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}-testng'
-      - '{project-name}-{stream}-csit-{functionality}-testng'
-    project-name: 'sdc-arm64'
+      - '{project-name}-arm64-{stream}-verify-csit-{functionality}-testng'
+      - '{project-name}-arm64-{stream}-csit-{functionality}-testng'
+    project-name: 'sdc'
     stream:
       - 'master':
           branch: 'master'
