--- a/jjb/vfc/vfc-nfvo-wfengine-csit.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-csit.yaml
@@ -17,9 +17,9 @@
 - project:
     name: vfc-nfvo-wfengine-csit-arm64
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'vfc-nfvo-wfengine-arm64'
+      - '{project-name}-arm64-{stream}-verify-csit-{functionality}'
+      - '{project-name}-arm64-{stream}-csit-{functionality}'
+    project-name: 'vfc-nfvo-wfengine'
     stream: 'master'
     functionality:
       - 'sanity-check'
