--- a/jjb/vid/vid-csit.yaml
+++ b/jjb/vid/vid-csit.yaml
@@ -18,9 +18,9 @@
 - project:
     name: vid-csit-arm64
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'vid-arm64'
+      - '{project-name}-arm64-{stream}-verify-csit-{functionality}'
+      - '{project-name}-arm64-{stream}-csit-{functionality}'
+    project-name: 'vid'
     stream:
       - 'master':
           branch: 'master'
