--- a/jjb/externalapi/externalapi-nbi.yaml
+++ b/jjb/externalapi/externalapi-nbi.yaml
@@ -51,9 +51,12 @@
     nexus-iq-namespace: 'onap-'
     project: 'externalapi/nbi'
     project-name: 'externalapi-nbi'
-    branch: 'casablanca'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'externalapi-nbi-settings'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
 
 - project:
     name: externalapi-nbi-sonar
