Update Jenkins with newly Casablanca branch
add stream to correct final jenkins job name

Change-Id: I483a7f00a1da2f04c9a5d6dc30edf3c3e18c0dd0
Issue-ID: EXTAPI-174
Signed-off-by: MatthieuGeerebaert <matthieu.geerebaert@orange.com>

--- a/jjb/externalapi/externalapi-nbi.yaml
+++ b/jjb/externalapi/externalapi-nbi.yaml
@@ -51,7 +51,9 @@
     nexus-iq-namespace: 'onap-'
     project: 'externalapi/nbi'
     project-name: 'externalapi-nbi'
-    branch: 'casablanca'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'externalapi-nbi-settings'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
 
@@ -63,7 +65,9 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'externalapi/nbi'
     project-name: 'externalapi-nbi'
-    branch: 'casablanca'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'externalapi-nbi-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
