Add arm64 docker build for appc
Add arm64 docker-build job for appc project:

Change-Id: Ife54ffbd637d7530b541b97f824caf65125ab40d
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/appc/appc-deployment.yaml
+++ b/jjb/appc/appc-deployment.yaml
@@ -23,6 +23,23 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: appc-deployment-arm64
+    project-name: 'appc-deployment-arm64'
+    jobs:
+      - '{project-name}-docker-image-blessing'
+
+    project: 'appc/deployment'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'appc-deployment-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: appc-deployment-docker
     project-name: 'appc-deployment'
     jobs:
@@ -43,3 +60,31 @@
     mvn-profile: docker
     build-node: queue-docker-4c-4g
 
+- project:
+    name: appc-deployment-arm64-docker
+    project-name: 'appc-deployment-arm64'
+    jobs:
+      - 'docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+      - 'docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'appc/deployment'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'appc-deployment-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
+    name: appc-deployment-clm
+    jobs:
+      - gerrit-maven-clm
+    nexus-iq-namespace: 'onap-'
+    project: 'appc/deployment'
+    project-name: 'appc-deployment'
+    branch: 'master'
+    mvn-settings: 'appc-deployment-settings'
