Allow docker-golang-shell-daily to specify node
Allow {project-name}-{stream}-docker-golang-shell-daily
to allow a specific build-node to be able to run these
jobs using the ARM architecture nodes.

All current projects using this job will stay unchaged and
will still run their builds on ubuntu1604-docker-8c-8g.

Change-Id: I9afacb764a9619aa2fdbc6371995be770a4b6bd4
Issue-ID: CIMAN-219
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/global-templates-golang.yaml
+++ b/jjb/global-templates-golang.yaml
@@ -143,7 +143,7 @@
     name: '{project-name}-{stream}-docker-golang-shell-daily'
     golangver: 'golang110'
     project-type: freestyle
-    node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
     disabled: false
     properties:
       - infra-properties:
