Run CLM for Casablanca
Candidates for MR1 need to have their CLM jobs
running on Casablanca too.

Change-Id: I7edf9d18ec42f0a1ae6cd70f1278e5644f195663
Issue-ID: CIMAN-228
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/oom/oom-registrator.yaml
+++ b/jjb/oom/oom-registrator.yaml
@@ -28,5 +28,9 @@
     nexus-iq-namespace: 'onap-'
     project: oom/registrator
     project-name: 'oom-registrator'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'oom-registrator-settings'
