Run CLM for Casablanca
Candidates for MR1 need to have their CLM jobs
running on Casablanca too.

Issue-ID: CIMAN-228
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I6d564bea223ca65e69d336cee06420792bd699cf

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -49,5 +49,9 @@
     project: so
     project-name: 'so'
     build-node: ubuntu1604-builder-4c-4g
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'so-settings'
