Run CLM for Casablanca
Candidates for MR1 need to have their CLM jobs
running on Casablanca too.

Change-Id: I7f48ebeeb4b44e2b1f55d45a4df13bb63968a010
Issue-ID: CIMAN-228
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/optf/optf-cmso.yaml
+++ b/jjb/optf/optf-cmso.yaml
@@ -62,5 +62,9 @@
     project: optf/cmso
     project-name: 'optf-cmso'
     build-node: ubuntu1604-docker-8c-8g
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'optf-cmso-settings'
