--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -75,5 +75,9 @@
     nexus-iq-namespace: 'onap-'
     project: optf/has
     project-name: 'optf-has'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'optf-has-settings'
