--- a/jjb/optf/optf-osdf.yaml
+++ b/jjb/optf/optf-osdf.yaml
@@ -74,5 +74,9 @@
     nexus-iq-namespace: 'onap-'
     project: optf/osdf
     project-name: 'optf-osdf'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'optf-osdf-settings'
