Re-enable Policy Casablanca release jobs
In anticipation of providing images for Casablanca Maintenance
release.

Issue-ID: POLICY-1390
Change-Id: I119f95074148c72c9028685b3e9beb6b787f3278
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-distribution.yaml
+++ b/jjb/policy/policy-distribution.yaml
@@ -37,7 +37,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
-          disabled: true
+          disabled: false
           build-node: ubuntu1604-docker-8c-8g
 
     project: 'policy/distribution'
