--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -24,7 +24,7 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
-          disabled: true
+          disabled: false
 
     project: 'policy/common'
     stream:
