Switch to RTD Generic Webhook API
API in use has been deprecated
Switch to the Generic API ...api/v2/webhook/...
Use credentials-binding wrapper for RTD token

Change-Id: I39252db79f8f3cd9f948bc66e8a543203a8a5b76
Issue-ID: CIMAN-230
Signed-off-by: Rich Bennett <rb2745@att.com>

--- a/jjb/doc/doc-templates-rtd.yaml
+++ b/jjb/doc/doc-templates-rtd.yaml
@@ -134,6 +134,10 @@
     wrappers:
       - infra-wrappers:
           build-timeout: '{build-timeout}'
+      - credentials-binding:
+          - text:
+             credential-id: docs-token
+             variable: DOCS_RTD_TOKEN
 
     triggers:
       - gerrit:
