--- a/jjb/doc/doc.yaml
+++ b/jjb/doc/doc.yaml
@@ -14,7 +14,7 @@
       - '{project-name}-{stream}-merge-rtd'
 
     project: 'doc'
-    rtdproject: 'onap'
+    rtdproject: 'onap/58810/'
     mvn-settings: 'doc-settings'
     stream:
       - master:
