Switch to RTD Generic Webhook API
API in use has been deprecated
Switch to the Generic API ...api/v2/webhook/...
Add rtdtoken to doc project template

Change-Id: I39252db79f8f3cd9f948bc66e8a543203a8a5b76
Issue-ID: CIMAN-230
Signed-off-by: Rich Bennett <rb2745@att.com>

--- a/jjb/doc/doc.yaml
+++ b/jjb/doc/doc.yaml
@@ -14,7 +14,8 @@
       - '{project-name}-{stream}-merge-rtd'
 
     project: 'doc'
-    rtdproject: 'onap'
+    rtdproject: 'onap/58810/'
+    rtdtoken: '885ac10ffc59c32659d23ebdab371401a38e6fd3'
     mvn-settings: 'doc-settings'
     stream:
       - master:
