Support openstack starlinx plugin
Change-Id: Ic158ab2c2b0900b882834c0ac07d2c16cdd58152
Issue-ID: MULTICLOUD-428
Signed-off-by: Haibin Huang <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack.yaml
+++ b/jjb/multicloud/multicloud-openstack.yaml
@@ -38,6 +38,14 @@
           path: 'pike'
           pattern: 'share/**'
           pom: 'pike/pom.xml'
+      - 'starlingx':
+          path: 'starlingx'
+          pattern: 'starlingx/**'
+          pom: 'starlingx/pom.xml'
+      - 'starlingx_share':
+          path: 'starlingx'
+          pattern: 'share/**'
+          pom: 'starlingx/pom.xml'
       - 'windriver':
           path: 'windriver'
           pattern: 'windriver/**'
@@ -127,6 +135,20 @@
     project-name: 'multicloud-openstack-pike'
     branch: 'master'
     mvn-params: '-f pike/pom.xml'
+    mvn-settings: 'multicloud-openstack-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: multicloud-openstack-starlingx-sonar
+    jobs:
+      - gerrit-maven-sonar
+    cron: '@daily'
+    build-node: ubuntu1604-builder-4c-4g
+    project: 'multicloud/openstack'
+    project-name: 'multicloud-openstack-starlingx'
+    branch: 'master'
+    mvn-params: '-f starlingx/pom.xml'
     mvn-settings: 'multicloud-openstack-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
