Pull demo casablanca for testsuite casablanca
The testsuite casablanca docker job was incorrectly pulling
the master branch of the demo repo instead of the casablanca
branch.  This fixes the issue.

Change-Id: I9323215ae503135b70295d0f972b079f29295ef1
Issue-ID: INT-775
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/testsuite/testsuite.yaml
+++ b/jjb/testsuite/testsuite.yaml
@@ -14,18 +14,19 @@
             !include-raw-escape: 'testsuite-docker.sh'
 
     project: 'testsuite'
+
     extra-project1: 'testsuite/python-testing-utils'
     extra-branch1: 'master'
-    extra-refspec1: 'refs/heads/{branch}'
+    extra-refspec1: 'refs/heads/master'
     checkout-dir1: 'testsuite/eteutils'
 
     extra-project2: 'testsuite/heatbridge'
     extra-branch2: 'master'
-    extra-refspec2: 'refs/heads/{branch}'
+    extra-refspec2: 'refs/heads/master'
     checkout-dir2: 'testsuite/heatbridge'
 
     extra-project3: 'demo'
-    extra-branch3: 'master'
+    extra-branch3: '{branch}'
     extra-refspec3: 'refs/heads/{branch}'
     checkout-dir3: 'demo'
 
