Add aai-validation view
Change-Id: I9e308b34e2790d93bc13975e3558280ea9514e7b
Issue-ID: CIMAN-195
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aai/aai-validation.yaml
+++ b/jjb/aai/aai-validation.yaml
@@ -1,5 +1,11 @@
 ---
 - project:
+    name: aai-validation-project-view
+    project-name: aai-validation
+    views:
+      - project-view
+
+- project:
     name: aai-validation
     project-name: 'aai-validation'
     jobs:
