[CI] add docker build - VVP validation scripts
Change-Id: Ic4e6f5bc890ba490d06b2285c0114405f04d8897
Issue-ID: VVP-82
Signed-off-by: stark, steven <steven.stark@att.com>

--- a/jjb/vvp/vvp-validation-scripts.yaml
+++ b/jjb/vvp/vvp-validation-scripts.yaml
@@ -12,16 +12,20 @@
           path: '.'
           pattern: '**'
     mvn-settings: 'vvp-validation-scripts-settings'
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    docker-pom: 'pom.xml'
+    mvn-profile: 'default'
 
 - project:
     name: vvp-validation-scripts-sonar
     jobs:
       - gerrit-maven-sonar
     cron: '@daily'
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     project: 'vvp/validation-scripts'
     project-name: 'vvp-validation-scripts'
     branch: 'master'
